--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  bottom_bar_with_sheet:
+    git:
+      url: git@github.com:mhsuab/bottom_bar_with_sheet.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
