--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     git:
       url: git@github.com:mhsuab/bottom_bar_with_sheet.git
       ref: master
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
