--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sports
-description: A new Flutter project.
+description: Application to track all sports I like.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,7 +38,9 @@ dependencies:
     git:
       url: git@github.com:mhsuab/bottom_bar_with_sheet.git
       ref: master
-  google_fonts: ^2.3.1
+  google_fonts: ^3.0.1
+  http: ^0.13.4
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/ifsc/
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
